@@ -1,6 +1,6 @@
 {
   "name": "simp-simp_banners",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "author": "simp",
   "summary": "Common banners collected for use in puppet modules",
   "license": "Apache-2.0",
@@ -44,6 +44,5 @@
       "name": "puppet",
       "version_requirement": ">= 4.6.0 < 6.0.0"
     }
-  ],
-  "data_provider": "hiera"
+  ]
 }
